<resources>
    <string name="app_name" translatable="false">MeloMix</string>
    <string name="pseudo">Nom d\'utilisateur</string>
    <string name="enter">Confirmer</string>
    <string name="je_cr_e_mon_groupe">Je crée mon groupe</string>
    <string name="je_rejoins_un_groupe">Je rejoins un groupe</string>
    <string name="confirmer">Confirmer</string>
    <string name="non_connect">Non connecté</string>
    <string name="valider_mon_profil">Valider mon profil</string>
    <string name="bouton_actualiser">Bouton actualiser</string>
    <string name="bouton_d_connecter">Bouton déconnecter</string>
    <string name="bouton_spotify">Bouton Spotify</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_remerciements">Merci d\'avoir téléchargé l\'application MeloMix ! Nous espérons qu\'elle vous conviendra !</string>
    <string name="descriptionProfileActivity">Connectez-vous à votre plateforme de streaming musicale préférée en cliquant sur son logo !</string>
    <string name="description_role_host">J\'organise l\'évènement</string>
    <string name="description_role_guest">Je suis un participant de l\'évènement</string>
    <string name="description_choose_host_activity">Choisissez l\'organisateur de l\'évènement que vous voulez rejoindre !</string>
    <string name="not_connected">Non connecté</string>
</resources>
